@@ -25,10 +25,17 @@ namespace device {
  */
 class DeviceAccessorBase {
 	astro::module::Repository&	_repository;
+protected:
+	DeviceName	accessible(const DeviceName& name) const;
+	void	check(const DeviceName& name,
+			DeviceName::device_type type) const;
 public:
 	DeviceAccessorBase(astro::module::Repository& repository)
 		: _repository(repository) { }
 	DeviceLocatorPtr	locator(const std::string& modulename);
+	DeviceLocatorPtr	locator(const DeviceName& devicename) {
+		return locator(devicename.modulename());
+	}
 };
 
 /**
@@ -43,7 +50,8 @@ public:
 	DeviceAccessor(astro::module::Repository& repository)
 		: DeviceAccessorBase(repository) { }
 	DeviceType	get(const DeviceName& /* name */) {
-		return DeviceType();
+		throw std::logic_error("DeviceAccessor::get not specialized "
+			"for this type");
 	}
 };
 
@@ -75,6 +83,11 @@ astro::camera::CoolerPtr
 template<>
 astro::camera::FocuserPtr
 	DeviceAccessor<astro::camera::FocuserPtr>::get(
+		const DeviceName& name);
+
+template<>
+astro::camera::AdaptiveOpticsPtr
+	DeviceAccessor<astro::camera::AdaptiveOpticsPtr>::get(
 		const DeviceName& name);
 
 template<>
