@@ -5,6 +5,8 @@ ChangeLog for the Astro project.
 	  main library, so that we can use network names in the main library
 	* improve DeviceName class so that it understands local and network
 	  device names, and can convert between them
+	* add missing Mount type to the DeviceAccessor class
+	* add Test for Nicer/Denicer classes
 
 20150713:
 	* fix threading issues in Avahi implementation
